src/automatas/Compilacion.java
package automatas;

/* Compilacion.java */
 /* Generated By:JavaCC: Do not edit this line. Compilacion.java */
import java.io.*;

class Compilacion implements CompilacionConstants {

     /**
     * @param args the command line arguments
     */
 public static void main(String[] args) throws ParseException, Exception {
        try {
            Compilacion analizador = new Compilacion(new FileInputStream("src/automatas/Sintaxis.txt"));
            analizador.Programa();
            System.out.println("\n");
            AnalisisSemantico.TablaSimbolos();

            System.out.println("\n");
            AnalisisSemantico.TablaDeErrores();

            System.out.println();
            System.out.println("Analizador Semantico concluido. \n");
            
            AnalisisSemantico.CodigoIntermedio();//Num1 * Num4 + ( Num2 - Num1 / Num5 ) / Num6 
            System.out.println();
            System.out.println("Analizador de codigo intermedio concluido. \n");


        } catch (ParseException e) {
            System.out.println("\u001B[31mA ocurrio un error sintatico no controlado, analisis semantico finalizado");
            System.out.println("\t " + e.getMessage());
        }
    }

    static final public void Programa() throws ParseException {

        jj_consume_token(PROGRAMA);
        jj_consume_token(IDENTIFIER);
        jj_consume_token(LBRACE);
        Bloque();
        jj_consume_token(RBRACE);
        jj_consume_token(0);
    }

    static final public void Bloque() throws ParseException {
        if (jj_2_1(2)) {
            VariablesGlobales();
        } else {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case MAIN:
                    Principal();
                    break;
                default:
                    jj_la1[0] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
            }
        }
    }

    static final public void VariablesGlobales() throws ParseException {
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case PRIVATE:
                jj_consume_token(PRIVATE);
                break;
            case PUBLIC:
                jj_consume_token(PUBLIC);
                break;
            default:
                jj_la1[1] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
        }
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case INT:
                jj_consume_token(INT);
                break;
            case DEC:
                jj_consume_token(DEC);
                break;
            case STR:
                jj_consume_token(STR);
                break;
            case CHR:
                jj_consume_token(CHR);
                break;
            default:
                jj_la1[2] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
        }
        jj_consume_token(IDENTIFIER);
        label_1:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case COMMA:
        ;
                    break;
                default:
                    jj_la1[3] = jj_gen;
                    break label_1;
            }
            jj_consume_token(COMMA);
            jj_consume_token(IDENTIFIER);
        }
        jj_consume_token(SEMICOLON);
        Bloque();
    }

    static final public void Principal() throws ParseException {

        AnalisisSemantico.SetTables();
        jj_consume_token(MAIN);
        jj_consume_token(LBRACE);
        Sentencias();
        jj_consume_token(RBRACE);
    }

    static final public void VariablesLocales() throws ParseException {
        int td;
        Token var;
        TiposDatos();
        td = token.kind;
        var = jj_consume_token(IDENTIFIER);
        AnalisisSemantico.InsertarSimbolo(var, td);

        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case ASIGNACION:
                VariablesAsignacion(var, td);
                break;
            default:
                jj_la1[4] = jj_gen;
                ;
        }
        label_2:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case COMMA:
        ;
                    break;
                default:
                    jj_la1[5] = jj_gen;
                    break label_2;
            }
            jj_consume_token(COMMA);
            var = jj_consume_token(IDENTIFIER);
            AnalisisSemantico.InsertarSimbolo(var, td);
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case ASIGNACION:
                    VariablesAsignacion(var, td);
                    break;
                default:
                    jj_la1[6] = jj_gen;
                    ;
            }
        }
        jj_consume_token(SEMICOLON);
        VS();
    }

    static final public void VariablesAsignacion(Token v1, int Tipo) throws ParseException {
        Token v2;
        Token v3;
        String res;
        boolean imp = false;
        jj_consume_token(ASIGNACION);
        TiposAsignaciones();
        v2 = token;
        res = AnalisisSemantico.checkAsing(v1, v2, Tipo);

        //lineA COMENTARIO
        if (res != " ") {
            System.out.println(res);
            imp = true;
        }
        label_3:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case PLUS:
                case MINUS:
                case MULTIPLY:
                case DIVIDE:
                case NUMBER:
                case IDENTIFIER:
                case DECIMAL:
                case CADENA:
                case CARAC:
        ;
                    break;
                default:
                    jj_la1[7] = jj_gen;
                    break label_3;
            }
            int tipo = 0;
            OpAritmetico();
            TiposAsignaciones();
            v3 = token;
            res = AnalisisSemantico.checkAsing(v1, v3, tipo);

            if (res != " " && !imp) {
                System.out.println(res);
            }
        }
    }

    static final public void VS() throws ParseException {
        if (jj_2_2(3)) {
            VariablesLocales();
        } else {
            Sentencias();
        }
    }

    static final public void Sentencias() throws ParseException {
        label_4:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case IF:
                case FOR:
                case SWITCH:
                case DO:
                case WHILE:
                case WRITE:
                case READ:
                case INT:
                case DEC:
                case CHR:
                case STR:
                case IDENTIFIER:
        ;
                    break;
                default:
                    jj_la1[8] = jj_gen;
                    break label_4;
            }
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case INT:
                case DEC:
                case CHR:
                case STR:
                    VariablesLocales();
                    break;
                case IF:
                    SentenciaIf();
                    break;
                case FOR:
                    SentenciaFor();
                    break;
                case DO:
                case WHILE:
                    SentenciaDo();
                    break;
                default:
                    jj_la1[9] = jj_gen;
                    if (jj_2_3(2)) {
                        SentenciaAsignacion();
                        jj_consume_token(SEMICOLON);
                        AnalisisSemantico.segunda = 0;
                    } else {
                        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                            case WRITE:
                                SentenciaWrite();
                                break;
                            case READ:
                                SentenciaRead();
                                jj_consume_token(SEMICOLON);
                                break;
                            case SWITCH:
                                SentenciaSwitch();
                                break;
                            default:
                                jj_la1[10] = jj_gen;
                                jj_consume_token(-1);
                                throw new ParseException();
                        }
                    }
            }
        }
    }

//Sentencia IF
    static final public void SentenciaIf() throws ParseException {
        jj_consume_token(IF);
        jj_consume_token(LPAREN);
        A();
        jj_consume_token(RPAREN);
        jj_consume_token(LBRACE);
        Sentencias();
        jj_consume_token(RBRACE);
        label_5:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case ELSE:
                case ELSEIF:
        ;
                    break;
                default:
                    jj_la1[11] = jj_gen;
                    break label_5;
            }
            Sino();
        }
    }

    static final public void Sino() throws ParseException {
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case ELSE:
                jj_consume_token(ELSE);
                jj_consume_token(LBRACE);
                Sentencias();
                jj_consume_token(RBRACE);
                break;
            case ELSEIF:
                jj_consume_token(ELSEIF);
                jj_consume_token(LPAREN);
                A();
                jj_consume_token(RPAREN);
                jj_consume_token(LBRACE);
                Sentencias();
                jj_consume_token(RBRACE);
                break;
            default:
                jj_la1[12] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
        }
    }

    static final public void A() throws ParseException {
        Comparaciones();
        label_6:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case OR:
                case AND:
                case NUMBER:
                case IDENTIFIER:
        ;
                    break;
                default:
                    jj_la1[13] = jj_gen;
                    break label_6;
            }
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case OR:
                case AND:
                    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                        case AND:
                            jj_consume_token(AND);
                            break;
                        case OR:
                            jj_consume_token(OR);
                            break;
                        default:
                            jj_la1[14] = jj_gen;
                            jj_consume_token(-1);
                            throw new ParseException();
                    }
                    break;
                default:
                    jj_la1[15] = jj_gen;
                    ;
            }
            Comparaciones();
        }
    }

//Fin sentencia if
    static final public void Comparaciones() throws ParseException {
        Valor();
        Operadores();
        Valor();
    }

    static final public void Valor() throws ParseException {
        if (jj_2_4(2)) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case IDENTIFIER:
                    jj_consume_token(IDENTIFIER);
                    break;
                case NUMBER:
                    jj_consume_token(NUMBER);
                    break;
                default:
                    jj_la1[16] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
            }
        } else {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case NUMBER:
                case IDENTIFIER:
                    Expresion();
                    break;
                default:
                    jj_la1[17] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
            }
        }
    }

    static final public void Expresion() throws ParseException {
        if (jj_2_5(2)) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case NUMBER:
                    jj_consume_token(NUMBER);
                    break;
                case IDENTIFIER:
                    jj_consume_token(IDENTIFIER);
                    break;
                default:
                    jj_la1[18] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
            }
        } else {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case NUMBER:
                case IDENTIFIER:
                    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                        case IDENTIFIER:
                            jj_consume_token(IDENTIFIER);
                            break;
                        case NUMBER:
                            jj_consume_token(NUMBER);
                            break;
                        default:
                            jj_la1[19] = jj_gen;
                            jj_consume_token(-1);
                            throw new ParseException();
                    }
                    OpAritmetico();
                    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                        case IDENTIFIER:
                            jj_consume_token(IDENTIFIER);
                            break;
                        case NUMBER:
                            jj_consume_token(NUMBER);
                            break;
                        default:
                            jj_la1[20] = jj_gen;
                            jj_consume_token(-1);
                            throw new ParseException();
                    }
                    break;
                default:
                    jj_la1[21] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
            }
        }
    }

    static final public void Operadores() throws ParseException {
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case EQ:
                jj_consume_token(EQ);
                break;
            case LE:
                jj_consume_token(LE);
                break;
            case GE:
                jj_consume_token(GE);
                break;
            case NE:
                jj_consume_token(NE);
                break;
            case GR:
                jj_consume_token(GR);
                break;
            case MN:
                jj_consume_token(MN);
                break;
            default:
                jj_la1[22] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
        }
    }

    static final public int OpAritmetico() throws ParseException {
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case PLUS:
                jj_consume_token(PLUS);
                 {
                    if (true) {
                        return 1;
                    }
                }
                break;
            case MINUS:
                jj_consume_token(MINUS);
                 {
                    if (true) {
                        return 1;
                    }
                }
                break;
            case MULTIPLY:
                jj_consume_token(MULTIPLY);
                 {
                    if (true) {
                        return 1;
                    }
                }
                break;
            case DIVIDE:
                jj_consume_token(DIVIDE);
                 {
                    if (true) {
                        return 1;
                    }
                }
                break;
            default:
                jj_la1[23] = jj_gen;
                 {
                    if (true) {
                        return 0;
                    }
                }
                 {
                    if (true) {
                        return 0;
                    }
                }
        }
        throw new Error("Missing return statement in function");
    }

    static final public void TiposDatos() throws ParseException {
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case INT:
                jj_consume_token(INT);
                break;
            case DEC:
                jj_consume_token(DEC);
                break;
            case STR:
                jj_consume_token(STR);
                break;
            case CHR:
                jj_consume_token(CHR);
                break;
            default:
                jj_la1[24] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
        }
    }

//Sentencia FOR
    static final public void SentenciaFor() throws ParseException {
        jj_consume_token(FOR);
        jj_consume_token(LPAREN);
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case INT:
            case DEC:
            case CHR:
            case STR:
                DeclaracionUnaVariable();
                break;
            case IDENTIFIER:
                SentenciaAsignacion();
                break;
            default:
                jj_la1[25] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
        }
        jj_consume_token(SEMICOLON);
        Comparaciones();
        jj_consume_token(SEMICOLON);
        SentenciaAsignacion();
        jj_consume_token(RPAREN);
        jj_consume_token(LBRACE);
        Sentencias();
        jj_consume_token(RBRACE);
    }

    static final public void DeclaracionUnaVariable() throws ParseException {
        int td;
        Token var;
        TiposDatos();
        td = token.kind;
        var = jj_consume_token(IDENTIFIER);
        AnalisisSemantico.InsertarSimbolo(var, td);
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case ASIGNACION:
                VariablesAsignacion(var, td);
                break;
            default:
                jj_la1[26] = jj_gen;
                ;
        }
    }

//Sentencia DO
    static final public void SentenciaDo() throws ParseException {
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case DO:
                jj_consume_token(DO);
                jj_consume_token(LBRACE);
                Sentencias();
                jj_consume_token(RBRACE);
                jj_consume_token(WHILE);
                jj_consume_token(LPAREN);
                Comparaciones();
                jj_consume_token(RPAREN);
                break;
            case WHILE:
                SentenciaWhile();
                break;
            default:
                jj_la1[27] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
        }
    }

    static final public void SentenciaWhile() throws ParseException {
        jj_consume_token(WHILE);
        jj_consume_token(LPAREN);
        Comparaciones();
        jj_consume_token(RPAREN);
        jj_consume_token(LBRACE);
        Sentencias();
        jj_consume_token(RBRACE);
    }

//Sentencia ASIGNACION
    static final public void SentenciaAsignacion() throws ParseException {
        Token v1;
        Token v2;
        Token v3;
        int aux;
        int tipo = 0;
        String res;
        boolean imp = false;
        v1 = jj_consume_token(IDENTIFIER);
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case ASIGNACION:
                jj_consume_token(ASIGNACION);
                TiposAsignaciones();
                v2 = token;
                res = AnalisisSemantico.checkAsing(v1, v2, tipo);

                if (res != " ") {
                    System.out.println(res);
                    imp = true;
                }
                label_7:
                while (true) {
                    if (jj_2_6(2)) {
                        ;
                    } else {
                        break label_7;
                    }
                    OpAritmetico();
                    TiposAsignaciones();
                    v3 = token;
                    res = AnalisisSemantico.checkAsing(v1, v3, tipo);

                    if (res != " " && !imp) {
                        System.out.println(res);
                    }
                }
                break;
            case INCR:
            case DECR:
                switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                    case INCR:
                        jj_consume_token(INCR);
                        break;
                    case DECR:
                        jj_consume_token(DECR);
                        break;
                    default:
                        jj_la1[28] = jj_gen;
                        jj_consume_token(-1);
                        throw new ParseException();
                }
                res = AnalisisSemantico.checkVariable(v1);

                if (res != " ") {
                    System.out.println(res);
                }
                break;
            default:
                jj_la1[29] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
        }
    }

    static final public void TiposAsignaciones() throws ParseException {
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case IDENTIFIER:
                jj_consume_token(IDENTIFIER);
                break;
            case NUMBER:
                jj_consume_token(NUMBER);
                break;
            case DECIMAL:
                jj_consume_token(DECIMAL);
                break;
            case CADENA:
                jj_consume_token(CADENA);
                break;
            case CARAC:
                jj_consume_token(CARAC);
                break;
            default:
                jj_la1[30] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
        }
    }

//Sentencia WRITE
    static final public void SentenciaWrite() throws ParseException {
        jj_consume_token(WRITE);
        jj_consume_token(LPAREN);
        label_8:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case NUMBER:
                case IDENTIFIER:
                case CADENA:
        ;
                    break;
                default:
                    jj_la1[31] = jj_gen;
                    break label_8;
            }
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case NUMBER:
                case IDENTIFIER:
                    Expresion();
                    label_9:
                    while (true) {
                        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                            case PLUS:
            ;
                                break;
                            default:
                                jj_la1[32] = jj_gen;
                                break label_9;
                        }
                        jj_consume_token(PLUS);
                        jj_consume_token(CADENA);
                    }
                    break;
                case CADENA:
                    jj_consume_token(CADENA);
                    label_10:
                    while (true) {
                        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                            case PLUS:
            ;
                                break;
                            default:
                                jj_la1[33] = jj_gen;
                                break label_10;
                        }
                        jj_consume_token(PLUS);
                        Expresion();
                    }
                    break;
                default:
                    jj_la1[34] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
            }
        }
        jj_consume_token(RPAREN);
        jj_consume_token(SEMICOLON);
    }

//Sentencia READ
    static final public void SentenciaRead() throws ParseException {
        jj_consume_token(READ);
        jj_consume_token(LPAREN);
        jj_consume_token(RPAREN);
    }

    static final public void SentenciaSwitch() throws ParseException {
        jj_consume_token(SWITCH);
        jj_consume_token(LPAREN);
        jj_consume_token(IDENTIFIER);
        jj_consume_token(RPAREN);
        jj_consume_token(LBRACE);
        label_11:
        while (true) {
            jj_consume_token(CASE);
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case IDENTIFIER:
                    jj_consume_token(IDENTIFIER);
                    break;
                case CADENA:
                    jj_consume_token(CADENA);
                    break;
                case CARAC:
                    jj_consume_token(CARAC);
                    break;
                case NUMBER:
                    jj_consume_token(NUMBER);
                    break;
                case DECIMAL:
                    jj_consume_token(DECIMAL);
                    break;
                default:
                    jj_la1[35] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
            }
            jj_consume_token(DOUBLEPOINT);
            label_12:
            while (true) {
                SentenciaAsignacion();
                jj_consume_token(SEMICOLON);
                switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                    case IDENTIFIER:
          ;
                        break;
                    default:
                        jj_la1[36] = jj_gen;
                        break label_12;
                }
            }
            jj_consume_token(BREAK);
            jj_consume_token(SEMICOLON);
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case CASE:
        ;
                    break;
                default:
                    jj_la1[37] = jj_gen;
                    break label_11;
            }
        }
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case DEFAUL:
                jj_consume_token(DEFAUL);
                jj_consume_token(DOUBLEPOINT);
                SentenciaAsignacion();
                jj_consume_token(SEMICOLON);
                jj_consume_token(BREAK);
                jj_consume_token(SEMICOLON);
                break;
            default:
                jj_la1[38] = jj_gen;
                ;
        }
        jj_consume_token(RBRACE);
    }

    static private boolean jj_2_1(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_1();
        } catch (LookaheadSuccess ls) {
            return true;
        } finally {
            jj_save(0, xla);
        }
    }

    static private boolean jj_2_2(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_2();
        } catch (LookaheadSuccess ls) {
            return true;
        } finally {
            jj_save(1, xla);
        }
    }

    static private boolean jj_2_3(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_3();
        } catch (LookaheadSuccess ls) {
            return true;
        } finally {
            jj_save(2, xla);
        }
    }

    static private boolean jj_2_4(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_4();
        } catch (LookaheadSuccess ls) {
            return true;
        } finally {
            jj_save(3, xla);
        }
    }

    static private boolean jj_2_5(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_5();
        } catch (LookaheadSuccess ls) {
            return true;
        } finally {
            jj_save(4, xla);
        }
    }

    static private boolean jj_2_6(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_6();
        } catch (LookaheadSuccess ls) {
            return true;
        } finally {
            jj_save(5, xla);
        }
    }

    static private boolean jj_3R_15() {
        if (jj_scan_token(IDENTIFIER)) {
            return true;
        }
        Token xsp;
        xsp = jj_scanpos;
        if (jj_3R_21()) {
            jj_scanpos = xsp;
            if (jj_3R_22()) {
                return true;
            }
        }
        return false;
    }

    static private boolean jj_3R_18() {
        Token xsp;
        xsp = jj_scanpos;
        if (jj_scan_token(44)) {
            jj_scanpos = xsp;
            if (jj_scan_token(45)) {
                jj_scanpos = xsp;
                if (jj_scan_token(47)) {
                    jj_scanpos = xsp;
                    if (jj_scan_token(46)) {
                        return true;
                    }
                }
            }
        }
        return false;
    }
